#506: fixed Java 1.8 List.of to Arrays.asList